--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.76</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.3.13</version>
+        </dependency>
     </dependencies>
 
 </project>
