--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -56,6 +56,17 @@
             <artifactId>spring-tx</artifactId>
             <version>5.3.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>0.5.10</version>
+        </dependency>
+
     </dependencies>
 
 </project>
